# gips

./: .dockerignore  .env_local  .env_local_example  .gitignore  Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  group_fixture.json  heroku.yml  informe.html  parametros_prueba.json  pyproject.toml  pytest.ini  run_gunicorn.sh  run_lighttpd.sh  tests_fixture.json  wait_for_db.sh  wordpress_entrypoint.sh
assets/css/: admin_custom_inline.css
assets/terminos_y_condiciones/: control_de_impulsos.md
conf/: lighttpd.conf  nginx-dev.conf  nginx.conf
entrevistas/: admin.py  apps.py  forms.py  ghd.py  models.py  serializers.py  urls.py  views.py
entrevistas/migrations/: 0001_initial.py  0002_alter_disponibilidad_options.py  0003_remove_bloqueo_usuario_remove_disponibilidad_usuario_and_more.py  0004_alter_entrevistador_options.py  0005_rename_fecha_entrevista_fecha_inicio_and_more.py  0006_remove_entrevista_entrevistado_entrevista_acceso.py  0007_entrevista_observaciones_entrevista_resultado.py  0008_alter_entrevista_resultado.py  0009_rename_entrevistador_sicologo.py  0010_alter_sicologo_options_sicologo_firma_and_more.py  0011_entrevista_resultado_entrevista.py  0012_sicologo_genero_sicologo_titulo.py
frontend/: package-lock.json
gips/: admin_urls.py  asgi.py  hosts.py  manage.py  settings.py  urls.py  views.py  wsgi.py
informes/: admin.py  gips_service.py  models.py  urls.py  views.py
tests/: admin.py  gips_service.py  models.py  serializers.py  urls.py  views.py
utils/: admin.py  fechas.py  numbers.py  request.py  text.py
(+56 files in other folders)
