[tool.poetry]
name = "gips"
version = "0.1.0"
description = "generador de informes psicológicos"
authors = ["Héctor Urbina <hurbinas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
